--- a/toc-autocapture/Views/Shared/_Layout.cshtml
+++ b/toc-autocapture/Views/Shared/_Layout.cshtml
@@ -14,9 +14,12 @@
             <div class="container">
         <div class="columns">
             <div class="column">
-                <a href="#" target="_blank" class="logo">
-                    <img src="~/img/MetLife.png" alt="MetLife Logo" style="height:40px;"/>
-                </a>
+                <h1>
+                    <a href="#" target="_blank" class="logo">
+                        Biometric Validation
+                        @*<img src="~/img/MetLife.png" alt="MetLife Logo" style="height:40px;"/>*@
+                    </a>
+                </h1>
             </div>
         </div>
             </div>
@@ -35,7 +38,7 @@
             <div class="metlife-green column col-sm-1 column"></div>
         </div>
         <div class="container">
-            &copy; 2020 - MetLife - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
